Added basic level progression

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <base href="/tumblehex/">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="origin-trial" content="AjrFSEISa+Z7Sy9KdWs4bYvuvxsgNuPRhkOyDg/C0Vv7vndWMdqq2g+w0K9UE6r9JSt9LX5tBKeHf6G7LuNNAQ8AAABXeyJvcmlnaW4iOiJodHRwczovL3JldmVscnllbmdpbmUuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJXZWJHUFUiLCJleHBpcnkiOjE2NjM3MTgzOTl9">
-        <meta http-equiv="origin-trial" content="AnzkHo5Iu8C7LkdK/VSa1qPuUfgCUWs+/GlnfxvQPwzQr3VtR6l/QU9bbNos+Fck60AmdL/l2/AC79b75yP9aQcAAABTeyJvcmlnaW4iOiJodHRwczovL3JldmVscnkucG9vbGUuY2xvdWQ6NDQzIiwiZmVhdHVyZSI6IldlYkdQVSIsImV4cGlyeSI6MTY2MzcxODM5OX0=">
+        <meta http-equiv="origin-trial" content="AnjwyxSKh70M/mfH+Sq5WGODn0vJQJtk066fwN5lrU3sgIzpXhlKvLwdlpZV+w8PDzWxVKj6LAtODjsbemNGWgEAAABXeyJvcmlnaW4iOiJodHRwczovL3JldmVscnllbmdpbmUuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJXZWJHUFUiLCJleHBpcnkiOjE2NzUyMDk1OTl9">
+        <meta http-equiv="origin-trial" content="AsN34H+qeKz9tfKEZB4yAMZIzrM/VTJWouM0Bp33biUvJ3EQneV3iGz/bvg+jFv2okC+2YnGh7srGjS7WRE2bgcAAABTeyJvcmlnaW4iOiJodHRwczovL3JldmVscnkucG9vbGUuY2xvdWQ6NDQzIiwiZmVhdHVyZSI6IldlYkdQVSIsImV4cGlyeSI6MTY3NTIwOTU5OX0=">
         <script src="./importmap.js"></script>
         <script type="module" src="./lib/tumblehex.js"></script>
         <style>
@@ -12,8 +13,7 @@
                 height: 100%;
                 padding: 0;
                 margin: 0;
-                background: radial-gradient(#3d3d3d, #121212);
-                /* background: radial-gradient(#72727e, #3d3d43); */
+                background: #3d3d3d;
             }
         </style>
     </head>
