updated to use new reference system structure

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="origin-trial" content="AnjwyxSKh70M/mfH+Sq5WGODn0vJQJtk066fwN5lrU3sgIzpXhlKvLwdlpZV+w8PDzWxVKj6LAtODjsbemNGWgEAAABXeyJvcmlnaW4iOiJodHRwczovL3JldmVscnllbmdpbmUuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJXZWJHUFUiLCJleHBpcnkiOjE2NzUyMDk1OTl9">
         <meta http-equiv="origin-trial" content="AsN34H+qeKz9tfKEZB4yAMZIzrM/VTJWouM0Bp33biUvJ3EQneV3iGz/bvg+jFv2okC+2YnGh7srGjS7WRE2bgcAAABTeyJvcmlnaW4iOiJodHRwczovL3JldmVscnkucG9vbGUuY2xvdWQ6NDQzIiwiZmVhdHVyZSI6IldlYkdQVSIsImV4cGlyeSI6MTY3NTIwOTU5OX0=">
         <script src="./importmap.js"></script>
-        <script type="module" src="./lib/tumblehex.js"></script>
+        <script type="module-shim" src="./lib/tumblehex.js"></script>
         <style>
             html, body {
                 width: 100%;
