updated revelry engine version

--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <base href="/tumblehex/">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="origin-trial" content="AoXziOTs+OPRsvcdWfgEuVxls9l040WqCcQ2ezA/cPartA7mDf71w0ZjWVP4m1DQnGxu4dMLd5tyE6cK/OtsywAAAABXeyJvcmlnaW4iOiJodHRwczovL3JldmVscnllbmdpbmUuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJXZWJHUFUiLCJleHBpcnkiOjE2OTE3MTE5OTl9">
-        <meta http-equiv="origin-trial" content="AqD3VS+yOUYOhHaAidtmehJy9zaXHmTOpJWQY/G5RHSkvEx71ouFPgFFhhwG3xF+d8IyNsAZQKcGYfbfUsaaSg0AAABeeyJvcmlnaW4iOiJodHRwczovL3Bvb2xlLmNsb3VkOjQ0MyIsImZlYXR1cmUiOiJXZWJHUFUiLCJleHBpcnkiOjE2OTE3MTE5OTksImlzU3ViZG9tYWluIjp0cnVlfQ==">
         <script src="./importmap.js"></script>
-        <script type="module-shim" src="./lib/tumblehex.js"></script>
+        <script type="module" src="./lib/tumblehex.js"></script>
         <style>
             html, body {
                 width: 100%;
